# kcoloredit

./: AUTHORS  CMakeLists.txt  Makefile.am  Messages.sh  README  color.cpp  color.h  colorselector.cpp  colorselector.h  editablestreamhistory.cpp  editablestreamhistory.h  gradientselection.cpp  gradientselection.h  imageselection.cpp  imageselection.h  kcolorchooser.cpp  kcolorchooser.desktop  kcoloredit.cpp  kcoloredit.desktop  kcoloredit.h  kcoloreditdoc.cpp  kcoloreditdoc.h  kcoloreditui.rc  kcoloreditview.cpp  kcoloreditview.h  kxycolorselector.cpp  kxycolorselector.h  kzcolorselector.cpp  kzcolorselector.h  loadpalettedlg.cpp  loadpalettedlg.h  main.cpp  main.h  palette.cpp  palette.h  palettehistory.h  paletteview.cpp  paletteview.h  paletteviewscrolledarea.cpp  paletteviewscrolledarea.h  (+4 more)
desktop/: CMakeLists.txt  kcoloredit.desktop  kcoloreditui.rc
doc/: CMakeLists.txt  index.docbook
src/: .directory  CMakeLists.txt
src/app/: kcoloredit.cpp  kcoloredit.h  main.cpp
src/core/: colorutil.cpp  colorutil.h  colorutils.cpp  colorutils.h  palette.cpp  palette.h  palettedocument.cpp  palettedocument.h  paletteitem.h  palettemodel.cpp  palettemodel.h
src/dialog/: palettedialog.cpp  palettedialog.h
src/itemviews/: .directory  palettebriefview.cpp  palettebriefview.h  palettedelegate.cpp  palettedelegate.h  palettedetailview.cpp  palettedetailview.h  palettemodel.cpp
src/settings/: builderconfiguration.ui  kcoloredit_settings.kcfg  kcoloredit_settings.kcfgc
src/widgets/: clipboardlineedit.cpp  clipboardlineedit.h  colortoolwidget.cpp  colortoolwidget.h  colorwidget.cpp  colorwidget.h  kcoloreditpage.cpp  kcoloreditpage.h  kcoloreditwidget.cpp  kcoloreditwidget.h  multipagewidget.cpp  multipagewidget.h  palettedelegateeditors.cpp  palettedelegateeditors.h  palettedescriptionwidget.cpp  palettedescriptionwidget.h
src/widgets/colorinfo/: .directory  colorinfo.cpp  colorinfo.h  colorinfotext.cpp  colorinfotext.h  colorinfovisual.cpp  colorinfovisual.h
src/widgets/colorselectors/: colorselector.cpp  colorselector.h
src/widgets/colorselectors/blenderselector/: blendercolorselector.cpp  blendercolorselector.h
src/widgets/colorselectors/builderselector/: buildercolorselector.cpp  buildercolorselector.h  builderwidget.ui
src/widgets/colorselectors/gtkselector/: gtkcolorselector.cpp  gtkcolorselector.h  trianglecolorwidget.cpp  trianglecolorwidget.h
src/widgets/colorselectors/kdeselector/: kdecolorselector.cpp  kdecolorselector.h  rectanglecolorwidget.cpp  rectanglecolorwidget.h
